fixd generateQuestion function and moved some existing code to a different function so that w=each function has it's specific roll

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
         <button id="start">Start</button>
 
+        <section id = "quizz-area"></section>
+
     </main>
 
     <footer></footer>
