making a start on the highscore page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 <head>
@@ -12,16 +11,19 @@
 
 <body>
     <header>
-        <h2>Time remaining: <span id="time-reamaining"></span></h2>
-        <h3>Points: <span id="points-number"></span></h3>
+        <h3>Time: <span id="time-reamaining"></span></h3>
+        <a href = "./highscore.html" id="highscore">View Highscores</a>
 
     </header>
 
     <main>
 
-        <button id="start">Start</button>
+        
 
-        <section id = "quizz-area"></section>
+        <section id = "quiz-area">
+            <button id="start">Start</button>
+
+        </section>
 
     </main>
 
