adding some styling

--- a/highscore.html
+++ b/highscore.html
@@ -12,11 +12,11 @@
 
     <section>
         <h2>Highscores</h2>
-        <div id="highscore-list">
+        <div id="highscore-list" class="hero">
             <div id="end"></div>
         </div>
         <a href="./index.html">Go Back</a>
-        <button>Clear highscores</button>
+        <button id="clear-button" class="btn">Clear highscores</button>
 
         </div>
     </section>
