--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/CSS/style.css">
     <title>Coding Quizz</title>
 </head>
@@ -11,20 +12,16 @@
 
 <body>
     <header>
-        <h3>Time: <span id="time-reamaining"></span></h3>
-        <a href = "./highscore.html" id="highscore">View Highscores</a>
+        <h3 id="time">Time: <span id="time-reamaining"></span></h3>
+        <a href = "./highscore.html" id="highscore" class="btn">View Highscores</a>
 
     </header>
 
     <main>
-
-        
-
-        <section id = "quiz-area">
-            <button id="start">Start</button>
+        <section id = "quiz-area" class="hero">
+            <button id="start" class="btn">Start Quiz</button>
 
         </section>
-
     </main>
 
     <footer></footer>
