adding more styling to the page

--- a/highscore.html
+++ b/highscore.html
@@ -4,18 +4,18 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/CSS/style.css">
+    <link rel="stylesheet" href="assets/CSS/highscore.css">
     <title>Highscores</title>
 </head>
 
 <body>
 
     <section>
-        <h2>Highscores</h2>
+        <h2 id="highscore">Highscores</h2>
         <div id="highscore-list" class="hero">
             <div id="end"></div>
         </div>
-        <a href="./index.html">Go Back</a>
+        <a href="./index.html" id="back" class="btn">Go Back</a>
         <button id="clear-button" class="btn">Clear highscores</button>
 
         </div>
