--- a/highscore.html
+++ b/highscore.html
@@ -4,21 +4,17 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/reset.css"/>
     <link rel="stylesheet" href="assets/CSS/highscore.css">
     <title>Highscores</title>
 </head>
 
 <body>
-
     <section>
-        <h2 id="highscore">Highscores</h2>
-        <div id="highscore-list" class="hero">
-            <div id="end"></div>
-        </div>
+        <h1 id="highscore">Highscores</h2>
+        <div id="highscore-list" class="hero"></div>
         <a href="./index.html" id="back" class="btn">Go Back</a>
         <button id="clear-button" class="btn">Clear highscores</button>
-
-        </div>
     </section>
 
     <script src="./assets/JS/highscorescript.js"></script>
